--- a/public/portfolio/portfolio_.html
+++ b/public/portfolio/portfolio_.html
@@ -132,7 +132,7 @@
   <section class="section services">
     <h2>Mes services</h2>
     <ul>
-      <li>Sites web sur mesure (HTML, CSS, JavaScript, WordPress, PHP)</li>
+      <li>Sites web sur mesure (HTML, CSS, JavaScript, PHP, Symfony)</li>
       <li>Applications mobiles Flutter (iOS & Android)</li>
       <li>Paiement en ligne (Stripe, Google Play Billing)</li>
       <li>Expérience utilisateur (UX/UI) et responsive design</li>
