--- a/public/portfolio/portfolio.html
+++ b/public/portfolio/portfolio.html
@@ -122,7 +122,7 @@
   <section class="section services">
     <h2>Mes services</h2>
     <ul>
-      <li>Développement de sites web sur mesure (HTML, CSS, JS, PHP, WordPress)</li>
+      <li>Développement de sites web sur mesure (HTML, CSS, JS, PHP, Symfony)</li>
       <li>Applications mobiles Flutter (iOS & Android)</li>
       <li>Intégration de paiements en ligne (Stripe, Google Play)</li>
       <li>Design responsive et UX/UI</li>
