--- a/public/portfolio/portfolio0.html
+++ b/public/portfolio/portfolio0.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Milton Pereira Mascarenhas - Développeur & Auteur</title>
+  <title>Milton Pereira Mascarenhas - Développeur Web & Mobile</title>
   <style>
     body {
       margin: 0;
@@ -78,16 +78,6 @@
       text-decoration: none;
     }
 
-    .publications a {
-      display: inline-block;
-      background: #005aa7;
-      color: white;
-      padding: 10px 15px;
-      border-radius: 5px;
-      text-decoration: none;
-      margin-top: 10px;
-    }
-
     @media (max-width: 600px) {
       header h1 {
         font-size: 24px;
@@ -99,13 +89,13 @@
 
   <header>
     <h1>Milton Pereira Mascarenhas</h1>
-    <p>Développeur Web & Mobile • Auto-entrepreneur • Auteur & Auto-éditeur</p>
+    <p>Développeur Web & Mobile • Auto-entrepreneur • Auto-éditeur</p>
   </header>
 
   <section class="section">
     <h2>À propos de moi</h2>
     <p>
-      Je suis développeur freelance spécialisé en création de sites web et d’applications mobiles sur mesure (Flutter). Également passionné par l’écriture, je publie mes propres livres en tant qu’auto-éditeur sur Amazon. J’aide aussi d'autres auteurs à concrétiser leurs projets de publication.
+      Je suis développeur web et mobile freelance basé à Fontenay-sous-Bois, spécialisé dans la création de sites internet, d'applications mobiles en Flutter, et de solutions digitales sur mesure. Je suis également auto-éditeur et accompagne les auteurs dans la publication de leurs livres et autobiographies.
     </p>
   </section>
 
@@ -119,12 +109,12 @@
       </div>
       <div class="card">
         <h3>Application IMUHOTEP</h3>
-        <p>Application de streaming vidéo avec système d’abonnement, paiements Stripe & Google Play intégrés.</p>
+        <p>Application mobile de streaming vidéo avec système d’abonnement et paiements via Stripe & Google Play.</p>
         <a href="https://falkon.click/imuhotepu" target="_blank">Voir le projet →</a>
       </div>
       <div class="card">
-        <h3>Apps Flutter</h3>
-        <p>Développement mobile : traduction, transcription, boutique en ligne, et contenu média.</p>
+        <h3>Applications Flutter</h3>
+        <p>Développement d'apps mobiles de traduction, transcription, e-commerce et gestion de contenu.</p>
       </div>
     </div>
   </section>
@@ -132,22 +122,12 @@
   <section class="section services">
     <h2>Mes services</h2>
     <ul>
-      <li>Sites web sur mesure (HTML, CSS, JavaScript, PHP, Symfony)</li>
+      <li>Développement de sites web sur mesure (HTML, CSS, JS, PHP, Symfony)</li>
       <li>Applications mobiles Flutter (iOS & Android)</li>
-      <li>Paiement en ligne (Stripe, Google Play Billing)</li>
-      <li>Expérience utilisateur (UX/UI) et responsive design</li>
-      <li>Accompagnement à la publication de livres, autobiographies, essais</li>
+      <li>Intégration de paiements en ligne (Stripe, Google Play)</li>
+      <li>Design responsive et UX/UI</li>
+      <li>Accompagnement à la publication de livres (mise en page, édition, diffusion)</li>
     </ul>
-  </section>
-
-  <section class="section publications">
-    <h2>Livres publiés</h2>
-    <p>
-      Découvrez mes ouvrages disponibles sur Amazon, où je partage mes recherches, récits et réflexions.
-    </p>
-    <a href="https://www.amazon.fr/stores/To-Imuhotepu/author/B0DQPK6XMM?ref=ap_rdr&isDramIntegrated=true&shoppingPortalEnabled=true" target="_blank">
-      Voir mes livres sur Amazon →
-    </a>
   </section>
 
   <section class="section contact">
