--- a/public/portfolio/portfolio_.html
+++ b/public/portfolio/portfolio_.html
@@ -105,7 +105,7 @@
   <section class="section">
     <h2>À propos de moi</h2>
     <p>
-      Je suis développeur freelance spécialisé en création de sites web et d’applications mobiles sur mesure (Flutter). Également passionné par l’écriture, je publie mes propres livres en tant qu’auto-éditeur sur Amazon. J’aide aussi d'autres auteurs à concrétiser leurs projets de publication.
+      Je suis développeur spécialisé en création de sites web et d’applications mobiles sur mesure (Flutter). Également passionné par l’écriture, je publie mes propres livres en tant qu’auto-éditeur sur Amazon. J’aide aussi d'autres auteurs à concrétiser leurs projets de publication.
     </p>
   </section>
 
